--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ascecca",
+  "name": "astro-learning",
   "type": "module",
   "version": "0.0.1",
   "scripts": {
@@ -9,6 +9,6 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^5.14.6"
+    "astro": "^5.14.1"
   }
 }
